# F1tenth_labs_Mwesi

./: CMakeLists.txt  README.md  pure_pursuit_node.cpp  relay.py  talker.py  wall_follow_node.cpp
extras/Physical_car/: NOMACHINE_nxserver_Setup.sh  SLAM_run_all.sh  Slam.rviz  edit_slam_toolbox.sh  frames.gv  laser_tf.sh  quick_run_slam.sh  run_all.sh  run_car_and_slam.sh  run_particle_filters.sh  run_ros2.sh  run_slam_toolbox.sh  run_teleop_joy.sh  run_tf_static_node.sh  run_urg_node_driver.sh  run_vesc.sh  run_vesc_w_yaml.sh  setup_ethernet.sh  slam_launch.py  start_car.sh  vesc_to_odom_node.yaml
lab1_ws/install/: local_setup.sh  setup.sh
lab1_ws/src/lab1_pkg/: package.xml  readme.md  setup.py
lab1_ws/src/lab1_pkg/lab1_pkg/: talker.py
lab1_ws/src/lab1_pkg/launch/: lab1_launch.py
lab1_ws/src/lab1_pkg/scripts/: run_lab1.sh
lab2_ws/: README.md
lab2_ws/safety_node/: CMakeLists.txt
lab2_ws/safety_node/scripts/: run_lab2.sh
lab2_ws/safety_node/src/: safety_node.cpp
lab3_ws/: wall_follow_node.cpp
lab3_ws/wall_follow/: package.xml  wall_follow_node.cpp
lab3_ws/wall_follow/src/: reactive_node.cpp  wall_follow_node.cpp
lab4_ws/: reactive_node.cpp
lab4_ws/gap_follow/: CMakeLists.txt  package.xml
lab4_ws/gap_follow/src/: reactive_node.cpp
lab6_ws/pure_pursuit/: CMakeLists.txt
lab6_ws/pure_pursuit/launch/: gym_bridge_slam_launch.py  sim_slam_launch.py
lab6_ws/pure_pursuit/src/: f1tenth_online_async.yaml  pure_pursuit_node.cpp  run_SLAM.sh  run_all.sh
lab7_ws/lab7_pkg/include/rrt/: rrt.h
lab7_ws/lab7_pkg/src/: rrt.cpp
lab8_ws/: Camera.cpp  README.md  camera.py
